feat: add dev conventional to node_modules #1

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "requestAnimationFrame"
   ],
   "author": "kostix.dev",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "git-conventional-commits": "^2.6.5"
+  }
 }
