--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:check": "eslint ./src/*",
+    "lint:fix": "eslint --fix  ./src/*",
     "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
-    "pre-commit": "npm run build:docs && git add ./docs/*"
+    "pre-commit": "npm run lint:fix && npm run build:docs && git add ./docs/*"
   },
   "keywords": [
     "setInterval",
@@ -16,6 +18,8 @@
   "author": "kostix.dev",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-google": "^0.14.0",
     "git-conventional-commits": "^2.6.5",
     "jsdoc-to-markdown": "^8.0.0"
   }
