--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Just another one solution for intervals and timeouts via requestAnimationFrame",
   "main": "src/index.js",
   "scripts": {
+    "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
-    "pre-commit": "npm run build:docs && git add ./docs/*"
+    "lint:check": "eslint ./src/*",
+    "lint:fix": "eslint --fix ./src/*",
+    "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md"
   },
   "keywords": [
     "setInterval",
@@ -16,7 +18,10 @@
   "author": "kostix.dev",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-google": "^0.14.0",
     "git-conventional-commits": "^2.6.5",
+    "husky": "^8.0.3",
     "jsdoc-to-markdown": "^8.0.0"
   }
 }
