feat: add some test cases (#9)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "git-conventional-commits": "^2.6.5",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.2",
     "jsdoc-to-markdown": "^8.0.0"
   }
 }
