--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "lint:check": "eslint ./src/*",
     "lint:fix": "eslint --fix ./src/*",
+    "pretty:fix": "npx prettier ./tests/index.test.js ./src/index.js --write",
     "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md"
   },
   "keywords": [
@@ -22,10 +23,12 @@
     "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.9.0",
     "git-conventional-commits": "^2.6.5",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
-    "jsdoc-to-markdown": "^8.0.0"
+    "jsdoc-to-markdown": "^8.0.0",
+    "prettier": "3.0.0"
   }
 }
