--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "git-conventional-commits": "^2.6.5",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
