--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:check": "eslint ./src/*",
     "lint:fix": "eslint --fix ./src/*",
     "pretty:fix": "npx prettier ./tests/index.test.js ./src/index.js --write",
-    "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md"
+    "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
+    "license:check": "jsgl --local ."
   },
   "keywords": [
     "setInterval",
@@ -29,6 +30,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
+    "js-green-licenses": "^4.0.0",
     "jsdoc-to-markdown": "^8.0.0",
     "prettier": "3.0.0"
   }
