--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "src/index.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "jest",
+    "test": "jest && npm run test:badges",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "jest-coverage-badges --input ./coverage/coverage-summary.json --output ./badges/jest",
     "lint:check": "eslint ./src/*",
     "lint:fix": "eslint --fix ./src/*",
-    "pretty:fix": "npx prettier ./tests/index.test.js ./src/index.js --write",
+    "pretty:fix": "npx prettier ./test/index.test.js ./src/index.js --write",
     "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
     "license:check": "jsgl --local ."
   },
@@ -29,6 +31,7 @@
     "git-conventional-commits": "^2.6.5",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
+    "jest-coverage-badges": "^1.1.2",
     "jest-environment-jsdom": "^29.6.2",
     "js-green-licenses": "^4.0.0",
     "jsdoc-to-markdown": "^8.0.0",
