--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "intervaq",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Just another one solution for intervals and timeouts via requestAnimationFrame",
+  "repository": "kostixdev/intervaq",
   "main": "src/index.js",
   "scripts": {
     "prepare": "husky install",
@@ -14,6 +15,12 @@
     "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
     "license:check": "jsgl --local ."
   },
+  "files": [
+    "src/index.js",
+    "badges/**/*",
+    ".prettierrc.json",
+    ".eslintrc.json"
+  ],
   "keywords": [
     "setInterval",
     "setTimeout",
