refactor: initial transfer to gts (#17)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,7 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "google",
-    "plugin:prettier/recommended"
-  ],
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
+  "extends": "./node_modules/gts/",
   "rules": {
-    "prettier/prettier": "error",
-    "arrow-body-style": "off",
-    "prefer-arrow-callback": "off"
-  },
-  "parserOptions": {
-    "sourceType": "module"
+    "node/no-unsupported-features/node-builtins": "warn",
+    "no-useless-catch": "off"
   }
 }
