--- a/package.json
+++ b/package.json
@@ -2,24 +2,33 @@
   "name": "intervaq",
   "version": "2.0.1",
   "description": "Just another one solution for intervals and timeouts via requestAnimationFrame",
-  "type": "module",
-  "repository": "kostixdev/intervaq",
-  "main": "src/index.js",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky install && npm run compile",
+    "dev": "npm run clean && tsc --watch",
     "test": "jest && npm run test:badges",
     "test:coverage": "jest --coverageReporters='json-summary'",
-    "test:badges": "node ./scripts/update-jest-badges.js",
+    "test:badges": "node ./build/scripts/update-jest-badges.js",
     "lint:check": "eslint ./src/*",
     "lint:fix": "eslint --fix ./src/*",
-    "pretty:fix": "npx prettier ./test/index.test.js ./src/index.js --write",
-    "build:docs": "node node_modules/.bin/jsdoc2md --heading-depth 1 ./src/index.js > ./docs/README.md",
+    "pretty:fix": "npx prettier ./src/index.ts ./test/index.test.ts ./scripts/update-jest-badges.ts --write",
+    "build:docs": "npx jsdoc2md --heading-depth 1 ./build/src/index.js > ./docs/README.md",
     "license:check": "jsgl --local .",
-    "build": "npm run license:check && npm run lint:fix && npm run pretty:fix && npm run build:docs && npm run test"
+    "build": "npm run license:check && npm run lint:fix && npm run pretty:fix && npm run build:docs && npm run test",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kostixdev/intervaq.git"
   },
   "files": [
-    "src/index.js",
-    "badges/**/*",
+    "build/src",
     ".prettierrc.json",
     ".eslintrc.json"
   ],
@@ -30,20 +39,32 @@
   ],
   "author": "kostix.dev",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/kostixdev/intervaq/issues"
+  },
+  "homepage": "https://github.com/kostixdev/intervaq#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "git-conventional-commits": "^2.6.5",
+    "gts": "^3.1.1",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
     "js-green-licenses": "^4.0.0",
     "jsdoc-to-markdown": "^8.0.0",
     "prettier": "3.0.0",
-    "readmeq": "^1.1.0"
+    "readmeq": "^1.3.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.7.0"
   }
 }
