--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "prepare": "husky install && npm run compile",
     "dev": "npm run clean && tsc --watch",
     "test": "jest && npm run test:badges",
-    "test:coverage": "jest --coverageReporters='json-summary'",
     "test:badges": "node ./build/scripts/update-jest-badges.js",
     "lint:check": "eslint ./src/*",
     "lint:fix": "eslint --fix ./src/*",
-    "pretty:fix": "npx prettier ./src/index.ts ./test/index.test.ts ./scripts/update-jest-badges.ts --write",
+    "pretty:fix": "npx prettier ./src/**/* ./test/**/* ./scripts/**/* --write",
     "build:docs": "npm run build:typedocmd && npm run postbuild:typedocmd",
     "build:typedocmd": "npx typedoc --plugin typedoc-plugin-markdown src/index.ts --outputFileStrategy modules --propertiesFormat table --enumMembersFormat table --typeDeclarationFormat table --hidePageHeader true",
     "postbuild:typedocmd": "node ./build/scripts/postbuild-typedocmd.js",
     "license:check": "jsgl --local .",
-    "build": "npm run license:check && npm run lint:fix && npm run pretty:fix && npm run build:docs && npm run test",
+    "build": "npm run license:check && npm run lint:fix && npm run pretty:fix && npm run compile && npm run test && npm run build:docs",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -30,9 +29,7 @@
     "url": "git+https://github.com/kostixdev/intervaq.git"
   },
   "files": [
-    "build/src",
-    ".prettierrc.json",
-    ".eslintrc.json"
+    "build/src"
   ],
   "keywords": [
     "setInterval",
@@ -62,7 +59,6 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.2",
     "js-green-licenses": "^4.0.0",
-    "jsdoc-to-markdown": "^8.0.0",
     "prettier": "3.0.0",
     "readmeq": "^1.3.0",
     "ts-jest": "^29.1.1",
